--- a/app/templates/sales/cart-items.html
+++ b/app/templates/sales/cart-items.html
@@ -3,7 +3,11 @@
         <tr>
             <th>Name</th>
             <th>Quantity</th>
+            <th>Discount</th>
             <th>Total</th>
+            <th>Action</th>
+            <th>Stock</th>
+            <th>ID</th>
         </tr>
     </thead>
 </table>
