--- a/app/templates/sales/cart-items.html
+++ b/app/templates/sales/cart-items.html
@@ -2,6 +2,7 @@
     <thead>
         <tr>
             <th>Name</th>
+            <th>Price</th>
             <th>Quantity</th>
             <th>Discount</th>
             <th>Total</th>
